Fixes
I had issues with the whitespace on my right side, uploaded an image and scroll back to top btn

--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body{
   background: #fefefe;
   margin: 2rem 0 0 0;
   transition: .5s ease;
+  overflow-x: hidden;
+
 }
 
 a{
@@ -28,7 +30,8 @@ li{
 }
 
 
-/*Scroll back to top btn*/
+/*    SCROLL BACK TO TOP BUTTON    */
+
 .scrollToTop-btn{
   z-index: 99999;
   position: fixed;
@@ -41,8 +44,15 @@ li{
   font-size: 0.9em;
   border-radius: 3px;
   cursor: pointer;
+  opacity: 0;
+  transition: .5s ease;
 }
-/*Light/Dark theme btn*/
+
+.scrollToTop-btn.active{
+  right: 20px;
+  pointer-events: all;
+  opacity: 1;
+}
 
 /*Scroll bar*/
 
@@ -60,7 +70,7 @@ li{
   background: #454f6b;
 }
 
-/*Header*/
+/*    HEADER      */
 header{
   z-index: 99999;
   width: 100%; 
@@ -122,7 +132,7 @@ font-weight: 500;
 
 }
 
-/*Home Section*/
+/*      HOME SECTION      */
 .home{
   position: relative;
   max-width: 1250px;
@@ -430,12 +440,10 @@ font-weight: 500;
 }
 
 
-/*Services section*/
-
 /*portfolio/projects section*/
 
 
-/*    Get In Touch    */
+/*      CONTACT FORM SECTION     */
 .contact .container .content{
   display: flex;
   justify-content: space-between;
@@ -722,4 +730,71 @@ footer a{
   width: 100%;
 }
 /*    FOOTER SECTION    */
+
+footer .footer-container{
+  flex-direction: column;
+}
+
+.footer-container .about, .footer-container .info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+  .footer-container .info ul{
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .footer-container .info ul li{
+    margin: 5px 0;
+  }
+  .footer-container .hr{
+    width: 100%;
+    height: 2px;
+    background: rgba(255, 255, 255, 0.1);
+    margin: 10px 0 22px;
+  }
+}
+
+@media screen and (max-width: 768px){
+ 
+  /*    COMMON STYLE FOR EACH SECTION    */
+
+  body{
+    margin: 5rem 0 0 0;
+  }
+
+  .section-title-01{
+    font-size: 3em;
+  }
+
+  .section-title-02{
+    font-size: 2em;
+    transform: translateY(-65px);
+  }
+
+  /*    HOME SECTION    */
+
+  .home .home-container{
+    display: grid;
+  }
+
+  .home-container .home-img{
+    position: absolute;
+  }
+
+  .home-container .home-img img{
+    width: 65%;
+    transform: translate(80px, -180px);
+  }
+
+  .home-container .home .info{
+    font-size: 0.8rem;
+  }
+
+  .media-icons {
+    margin-bottom: 80px;
+  }
 }
